# pyraft

./: .gitignore  LICENSE  cspell.json  pyproject.toml
src/: example.py
src/pyraft/: __init__.py  raft.py  raft_details.md  state.py
src/pyraft/transport/: grpc_transport.py  local_transport.py  transport_protocol.py
